# agentic-chat-qwen35-mlx

./: .gitignore  AGENTS.md  README.md  justfile  plan.md  pyproject.toml
src/rag_agent/: __init__.py  agent.py  cli.py  context.py  deps.py  models.py
src/rag_agent/tools/: __init__.py  files.py  search.py
tests/: test_agent.py  test_files.py  test_search.py
